--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,40 @@
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
 
-    body{
-        background-color: #1e1e1e ;
+    .fullcorpus{
+        background-color: #343a40 ;
+        color: white;
+    }
+    .list-group-item, .card-body{
+        color: #343a40;
     }
 
 }
 
 @media screen and (max-width: 768px) {
 
-    body{
+    .fullcorpus{
         background-color: #6a6a6a    ;
+        color: white;
+    }
+    .list-group-item, .card-body{
+        color: #6a6a6a;
     }
 
 }
 
 @media screen and (min-width: 1025px) {
 
-    body{
+    .fullcorpus{
         background-color: #9e9e9e    ;
+        color: white;
+    }
+    .list-group-item, .card-body{
+        color: #9e9e9e;
     }
 
 }
+
 
 * {
     box-sizing: content-box;
@@ -60,23 +73,27 @@ img {
 
 }
 
+.whiteBG{
+    background-color: white;
+}
 a {
+    text-decoration: none;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: large;
     border: 2px solid white;
     padding: 2%;
-    text-decoration: none;
 }
 
 a:hover {
 
+    text-decoration: none;
     color: gray;
     font-family: Arial, Helvetica, sans-serif;
     font-size: larger;
     border: 2px solid gray;
     padding: 4%;
-    text-decoration: none;
+
 }
 
 
