--- a/css/styles.css
+++ b/css/styles.css
@@ -26,11 +26,11 @@
 @media screen and (min-width: 1025px) {
 
     .fullcorpus{
-        background-color: #9e9e9e    ;
+        background-color: #4d5f65    ;
         color: white;
     }
     .list-group-item, .card-body{
-        color: #9e9e9e;
+        color: #4d5f65 
     }
 
 }
@@ -59,7 +59,7 @@ body {
     text-align: center;
 }
 
-img {
+.imgs {
     margin-bottom: 10%;
     margin-top: 0;
     width: 50%;
@@ -76,7 +76,7 @@ img {
 .whiteBG{
     background-color: white;
 }
-a {
+.pagref {
     text-decoration: none;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -85,7 +85,7 @@ a {
     padding: 2%;
 }
 
-a:hover {
+.pagref:hover {
 
     text-decoration: none;
     color: gray;
@@ -115,5 +115,3 @@ a:hover {
 .accordion {
     transition: .15s ease;
 }
-
-/* $accordion-button-active-color:           var(--#{$prefix}primary-text-emphasis); */
